--- a/game.html
+++ b/game.html
@@ -7,6 +7,7 @@
     <title>The url shooter game !</title>
   </head>
   <body>
+    <h1>Hit Any Key to Shoot Bullets</h1>
 
     <script src="app.js"></script>
   </body>
