--- a/game.html
+++ b/game.html
@@ -9,6 +9,8 @@
   <body>
     <h1>Hit Any Key to Shoot Bullets</h1>
 
+    <audio id="shoot" src="shoot.wav"></audio>
+
     <script src="app.js"></script>
   </body>
 </html>
